подправил вектора, стёр тесты, шаг к гит-модулям

--- a/u_types/Makefile
+++ b/u_types/Makefile
@@ -1,20 +1,22 @@
 
 OBJ=\
-	./src/u_hash.o  
-	#./src/u_queue.o	
+	./src/u_hash.o \
+	./src/u_vector.o \
 
- 
+
 CFLAGS = -Wall -O2 -I./inc -I. 
 CFLAGS += -I../u_stdlib 
 # CFLAGS += -march=native -fomit-frame-pointer
-LDFLAGS =   
+# LDFLAGS =   
 
 # libu_stdlib.a: $(OBJ)
 	# ar crs $@ $^
 
-
-./src/u_hash:./src/u_hash.o #libu_stdlib.a
-./src/u_hash.o:
+libu_types.a: $(OBJ)
+	ar crs $@ $^
+# ./src/u_hash:./src/u_hash.o #libu_stdlib.a
+# ./src/u_hash.o:
+# ./src/u_vector.o:
 
 # test: libu_stdlib.a
 # 	gcc $(CFLAGS) u_test.c hex.c -L. -lu_stdlib
